# libkexiv2

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  KF5KExiv2Config.cmake.in  Makefile.am  Messages.sh  NEWS  README  TODO  configure.in.bot  configure.in.in  exiv2iface.cpp  exiv2iface.h  kexiv2.cpp  kexiv2.h  kexiv2_export.h  libkexiv2.cpp  libkexiv2.h  libkexiv2.kdevelop  libkexiv2.lsm  libkexiv2.lsm.cmake  libkexiv2.pc.cmake  libkexiv2.pc.in  libkexiv2_export.h  metainfo.yaml  version.h
cmake/modules/: FindExiv2.cmake  FindLibExiv2.cmake
cmake/templates/: KExiv2Config.cmake.in  KF5KExiv2Config.cmake.in  KF6KExiv2Config.cmake.in  libkexiv2-config.cmake.in  libkexiv2.lsm.cmake.in  libkexiv2.pc.cmake.in
data/: CMakeLists.txt
libkexiv2/: CMakeLists.txt  Doxyfile  Doxyfile-developer  Makefile.am  altlangstredit.cpp  altlangstredit.h  countryselector.cpp  countryselector.h  kexiv2.cpp  kexiv2.h  kexiv2_p.cpp  kexiv2_p.h  kexiv2comments.cpp  kexiv2data.h  kexiv2exif.cpp  kexiv2gps.cpp  kexiv2image.cpp  kexiv2iptc.cpp  kexiv2previews.cpp  kexiv2previews.h  kexiv2private.cpp  kexiv2private.h  kexiv2xmp.cpp  libkexiv2_export.h  msgtextedit.cpp  msgtextedit.h  rotationmatrix.cpp  rotationmatrix.h  subjectwidget.cpp  subjectwidget.h  version.h  version.h.cmake
src/: CMakeLists.txt  Doxyfile  Mainpage.dox  altlangstredit.cpp  altlangstredit.h  countryselector.cpp  countryselector.h  kexiv2-index.qdoc  kexiv2.cpp  kexiv2.h  kexiv2.qdoc  kexiv2.qdocconf  kexiv2_p.cpp  kexiv2_p.h  kexiv2comments.cpp  kexiv2data.cpp  kexiv2data.h  kexiv2exif.cpp  kexiv2gps.cpp  kexiv2image.cpp  kexiv2iptc.cpp  kexiv2previews.cpp  kexiv2previews.h  kexiv2xmp.cpp  libkexiv2_debug.cpp  libkexiv2_debug.h  msgtextedit.cpp  msgtextedit.h  rotationmatrix.cpp  rotationmatrix.h  subjectwidget.cpp  subjectwidget.h
test/: CMakeLists.txt  erasetag.cpp  loadfromba.cpp  printtagslist.cpp  readimagewritexmpsidecar.cpp  setiptcpreview.cpp  setxmpface.cpp  usexmpsidecar.cpp
tests/: CMakeLists.txt  erasetag.cpp  loadfromba.cpp  printtagslist.cpp  readimagewritexmpsidecar.cpp  setiptcpreview.cpp  setxmpface.cpp  usexmpsidecar.cpp
